--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart | TastyGo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">🍔 <span class="tastygo-text">TastyGo</span></div>
+        <div class="logo">🍔 TastyGo</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
@@ -29,6 +29,6 @@
         <button class="checkout-btn">Proceed to Checkout</button>
     </section>
     
-    <script src="script.js"></script>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
