--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu | TastyGo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 
 </head>
 <body>
@@ -25,55 +25,55 @@
         <h1 class="attention-text">"Craving something delicious? 🍔🍕<br> Order now and let <span class="tastygo-text">TastyGo</span> bring the feast to your doorstep!"</h1>
         <div class="menu-container">
             <div class="menu-item">
-                <img src="cheese burger.jpg" alt="Burger">
+                <img src="../Img/cheese burger.jpg" alt="Burger">
                 <h3>Cheese Burger</h3>
                 <p>$5.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="pizza.jpg" alt="Pizza">
+                <img src="../Img/pizza.jpg" alt="Pizza">
                 <h3>Margherita Pizza</h3>
                 <p>$8.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="dabeli.jpg" alt="Dabeli">
+                <img src="../Img/dabeli.jpg" alt="Dabeli">
                 <h3>Dabeli</h3>
                 <p>$7.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="lassi.jpg" alt="Lassi">
+                <img src="../Img/lassi.jpg" alt="Lassi">
                 <h3>Lassi</h3>
                 <p>$12.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="thepla.jpg" alt="Thepla">
+                <img src="../Img/thepla.jpg" alt="Thepla">
                 <h3>Thepla</h3>
                 <p>$6.49</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="dessert.jpg" alt="Dessert">
+                <img src="../Img/Des.jpeg" alt="Dessert">
                 <h3>Chocolate Lava Cake</h3>
                 <p>$4.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="pakoda.jpg" alt="Pakoda">
+                <img src="../Img/pakoda.jpg" alt="Pakoda">
                 <h3>Pakoda</h3>
                 <p>$4.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="chhole.jpg" alt="Chhole">
+                <img src="../Img/chhole.jpg" alt="Chhole">
                 <h3>Chhole Bhature</h3>
                 <p>$4.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="menu-item">
-                <img src="samosa.jpg" alt="Samosa">
+                <img src="../Img/samosa.jpg" alt="Samosa">
                 <h3>Samosa</h3>
                 <p>$4.99</p>
                 <button class="add-to-cart">Add to Cart</button>
@@ -81,6 +81,6 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="../JS/script.js"></script>
 </body>
 </html>
