Add menu page and images

--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -27,7 +27,7 @@
         </div> 
     </nav>
 
-    <div class="menu-nav">
+    <!-- <div class="menu-nav">
         <div class="menu-categories">
             <a href="#starters" class="menu-category active">
                 <div class="category-image">
@@ -64,6 +64,88 @@
                 <span class="category-name">Specials</span>
             </a>
         </div>
+    </div> -->
+
+    <div class="menu-content">
+        <section id="burgers" class="menu-section">
+            <h2>Burgers</h2>
+            <div class="menu-items">
+                <div class="menu-item">
+                    <img src="../Img/classic-burger.jpg" alt="Classic Burger">
+                    <h3>Classic Burger</h3>
+                    <p>Juicy beef patty with fresh lettuce, tomato, and our special sauce</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+                <!-- Add more burger items -->
+            </div>
+        </section>
+
+        <section id="pizza" class="menu-section">
+            <h2>Pizza</h2>
+            <div class="menu-items">
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+                <!-- Add more pizza items -->
+            </div>
+        </section>
+
+        <!-- Example of how to structure other sections -->
+        <section id="drinks" class="menu-section">
+            <h2>Drinks</h2>
+            <div class="menu-items">
+                <!-- Add drink items -->
+            </div>
+        </section>
+
+        <section id="sandwiches" class="menu-section">
+            <h2>Sandwiches</h2>
+            <div class="menu-items">
+                <!-- Add sandwich items -->
+            </div>
+        </section>
+
+        <!-- Add remaining sections -->
+        <section id="sides" class="menu-section">
+            <!-- Sides content -->
+        </section>
+
+        <section id="desserts" class="menu-section">
+            <!-- Desserts content -->
+        </section>
+
+        <section id="combos" class="menu-section">
+            <!-- Combos content -->
+        </section>
+
+        <section id="pasta" class="menu-section">
+            <!-- Pasta content -->
+        </section>
+
+        <section id="chinese" class="menu-section">
+            <!-- Chinese content -->
+        </section>
+
+        <section id="soups" class="menu-section">
+            <!-- Soups content -->
+        </section>
+
+        <section id="salads" class="menu-section">
+            <!-- Salads content -->
+        </section>
+
+        <section id="mexican" class="menu-section">
+            <!-- Mexican content -->
+        </section>
+
+        <section id="sushi" class="menu-section">
+            <!-- Sushi content -->
+        </section>
     </div>
 </body>
 </html>
