Expand menu with diverse burger and pizza options

--- a/HTML/menu.html
+++ b/HTML/menu.html
@@ -71,9 +71,65 @@
             <h2>Burgers</h2>
             <div class="menu-items">
                 <div class="menu-item">
-                    <img src="../Img/classic-burger.jpg" alt="Classic Burger">
-                    <h3>Classic Burger</h3>
+                    <img src="..\Img\beef burger.jpg" alt="Beef Burger">
+                    <h3>Beef Burger</h3>
                     <p>Juicy beef patty with fresh lettuce, tomato, and our special sauce</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\chicken burger.jpeg" alt="Chicken Burger">
+                    <h3>Chicken Burger</h3>
+                    <p>Crispy breaded chicken breast with lettuce, mayo, and pickles</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\bison burger.jpeg" alt="Bison Burger">
+                    <h3>Bison Burger</h3>
+                    <p>Lean bison patty with caramelized onions, Swiss cheese, and garlic aioli</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\mushroom burger.jpeg" alt="Mushroom Burger">
+                    <h3>Mushroom Burger</h3>
+                    <p>Grilled portobello mushroom cap with roasted red peppers and pesto sauce</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\veg burger.jpg" alt="Veggie Burger">
+                    <h3>Veggie Burger</h3>
+                    <p>House-made vegetable patty with avocado, sprouts, and chipotle mayo</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\black-bean burger.jpeg" alt="Black Bean Burger">
+                    <h3>Black Bean Burger</h3>
+                    <p>Spiced black bean patty with corn salsa, lettuce, and lime crema</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\cheese burger.jpg" alt="Cheese Burger">
+                    <h3>Cheese Burger</h3>
+                    <p>Classic patty topped with melted cheese and caramelized onions</p>
+                    <span class="price">$8.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="..\Img\turkey burger.jpg" alt="Turkey Burger">
+                    <h3>Turkey Burger</h3>
+                    <p>Lean turkey patty with lettuce, tomato, and avocado</p>
                     <span class="price">$8.99</span>
                     <button class="add-to-cart">Add to Cart</button>
                 </div>
@@ -84,6 +140,62 @@
         <section id="pizza" class="menu-section">
             <h2>Pizza</h2>
             <div class="menu-items">
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
+                <div class="menu-item">
+                    <img src="../Img/margherita.jpg" alt="Margherita Pizza">
+                    <h3>Margherita Pizza</h3>
+                    <p>Fresh tomatoes, mozzarella, basil, and olive oil</p>
+                    <span class="price">$12.99</span>
+                    <button class="add-to-cart">Add to Cart</button>
+                </div>
+
                 <div class="menu-item">
                     <img src="../Img/margherita.jpg" alt="Margherita Pizza">
                     <h3>Margherita Pizza</h3>
