Add footer, script links, and remove unnecessary files across multiple HTML pages

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -134,5 +134,32 @@
             </a>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>About TastyBites</h4>
+                <p>Your favorite food delivery partner</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="terms.html">Terms & Conditions</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: info@tastybites.com</p>
+                <p>Phone: (555) 123-4567</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 TastyBites. All rights reserved.</p>
+        </div>
+    </footer>
+    
+    <script src="../JS/script.js"></script>
 </body>
 </html>
