--- a/HTML/about.html
+++ b/HTML/about.html
@@ -104,18 +104,18 @@
             <h2>Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="../Img/team/ceo.jpg" alt="CEO">
-                    <h3>John Smith</h3>
+                    <img src="../Img/ceo.jpg" alt="CEO">
+                    <h3>Sahaj Patel</h3>
                     <p>CEO & Founder</p>
                 </div>
                 <div class="team-member">
-                    <img src="../Img/team/cto.jpg" alt="CTO">
-                    <h3>Sarah Johnson</h3>
+                    <img src="../Img/cto.jpg" alt="CTO">
+                    <h3>Arya Patel</h3>
                     <p>Chief Technology Officer</p>
                 </div>
                 <div class="team-member">
                     <img src="../Img/team/chef.jpg" alt="Head Chef">
-                    <h3>Michael Chen</h3>
+                    <h3>Dhruv Patel</h3>
                     <p>Head of Culinary Operations</p>
                 </div>
             </div>
