--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TastyBites - Your Cart</title>
+    <title>Shopping Cart - TastyBites</title>
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">TastyBites</a>
@@ -28,95 +32,62 @@
         </div>
     </nav>
 
+    <!-- Cart Container -->
     <div class="cart-container">
-        <div class="cart-header">
-            <h1>Your Cart</h1>
-            <p>Review your items before checkout</p>
+        <h1>Your Cart</h1>
+        
+        <!-- Cart Items -->
+        <div class="cart-items" id="cartItems">
+            <!-- Cart items will be dynamically inserted here -->
         </div>
 
-        <div class="cart-content">
-            <div class="cart-items">
-                <!-- Sample Cart Item -->
-                <div class="cart-item">
-                    <div class="item-image">
-                        <img src="../Img/pizza.jpg" alt="Margherita Pizza">
-                    </div>
-                    <div class="item-details">
-                        <h3>Margherita Pizza</h3>
-                        <p class="restaurant">From: Italian Delight</p>
-                        <p class="price">$14.99</p>
-                    </div>
-                    <div class="item-quantity">
-                        <button class="quantity-btn minus">-</button>
-                        <input type="number" value="1" min="1" max="10">
-                        <button class="quantity-btn plus">+</button>
-                    </div>
-                    <div class="item-total">
-                        <p>$14.99</p>
-                    </div>
-                    <button class="remove-item">
-                        <i class="fas fa-trash"></i>
-                    </button>
-                </div>
-
-                <!-- Another Cart Item -->
-                <div class="cart-item">
-                    <div class="item-image">
-                        <img src="../Img/pasta.jpg" alt="Pasta Alfredo">
-                    </div>
-                    <div class="item-details">
-                        <h3>Pasta Alfredo</h3>
-                        <p class="restaurant">From: Italian Delight</p>
-                        <p class="price">$12.99</p>
-                    </div>
-                    <div class="item-quantity">
-                        <button class="quantity-btn minus">-</button>
-                        <input type="number" value="1" min="1" max="10">
-                        <button class="quantity-btn plus">+</button>
-                    </div>
-                    <div class="item-total">
-                        <p>$12.99</p>
-                    </div>
-                    <button class="remove-item">
-                        <i class="fas fa-trash"></i>
-                    </button>
-                </div>
+        <!-- Cart Summary -->
+        <div class="cart-summary">
+            <h2>Order Summary</h2>
+            <div class="summary-item">
+                <span>Subtotal:</span>
+                <span id="subtotal">$0.00</span>
+            </div>
+            <div class="summary-item">
+                <span>Delivery Fee:</span>
+                <span id="deliveryFee">$2.99</span>
+            </div>
+            <div class="summary-item">
+                <span>Tax (10%):</span>
+                <span id="tax">$0.00</span>
+            </div>
+            <div class="summary-item total">
+                <span>Total:</span>
+                <span id="total">$0.00</span>
             </div>
 
-            <div class="cart-summary">
-                <h2>Order Summary</h2>
-                <div class="summary-item">
-                    <span>Subtotal</span>
-                    <span>$27.98</span>
-                </div>
-                <div class="summary-item">
-                    <span>Delivery Fee</span>
-                    <span>$2.99</span>
-                </div>
-                <div class="summary-item">
-                    <span>Tax</span>
-                    <span>$2.48</span>
-                </div>
-                <div class="promo-code">
-                    <input type="text" placeholder="Enter promo code">
-                    <button>Apply</button>
-                </div>
-                <div class="summary-total">
-                    <span>Total</span>
-                    <span>$33.45</span>
-                </div>
-                <button class="checkout-btn">
-                    Proceed to Checkout
-                </button>
-                <div class="continue-shopping">
-                    <a href="restaurants.html">
-                        <i class="fas fa-arrow-left"></i> Continue Shopping
-                    </a>
-                </div>
+            <!-- Promo Code -->
+            <div class="promo-code">
+                <input type="text" id="promoCode" placeholder="Enter promo code">
+                <button id="applyPromo">Apply</button>
             </div>
+
+            <!-- Checkout Button -->
+            <button class="checkout-btn" id="checkoutBtn">
+                Proceed to Checkout
+            </button>
+
+            <!-- Continue Shopping -->
+            <a href="menu.html" class="continue-shopping">
+                <i class="fas fa-arrow-left"></i> Continue Shopping
+            </a>
+        </div>
+
+        <!-- Empty Cart Message (hidden by default) -->
+        <div class="empty-cart" id="emptyCart" style="display: none;">
+            <i class="fas fa-shopping-basket"></i>
+            <h2>Your cart is empty</h2>
+            <p>Looks like you haven't added anything to your cart yet.</p>
+            <a href="menu.html" class="start-shopping-btn">Start Shopping</a>
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section">
@@ -140,7 +111,132 @@
         <div class="footer-bottom">
             <p>&copy; 2024 TastyBites. All rights reserved.</p>
         </div>
-    </footer>   
-    <script src="../JS/script.js"></script>
-</body>
-</html> 
+    </footer>
+
+    <!-- Add this to your existing script.js or create a new cart.js -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Get cart container elements
+            const cartItemsContainer = document.getElementById('cartItems');
+            const emptyCartMessage = document.getElementById('emptyCart');
+            const subtotalElement = document.getElementById('subtotal');
+            const taxElement = document.getElementById('tax');
+            const totalElement = document.getElementById('total');
+            const checkoutBtn = document.getElementById('checkoutBtn');
+            const promoCodeInput = document.getElementById('promoCode');
+            const applyPromoBtn = document.getElementById('applyPromo');
+
+            // Load cart from localStorage
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+            // Render cart items
+            function renderCart() {
+                if (cart.length === 0) {
+                    // Show empty cart message
+                    cartItemsContainer.style.display = 'none';
+                    emptyCartMessage.style.display = 'block';
+                    document.querySelector('.cart-summary').style.display = 'none';
+                } else {
+                    // Hide empty cart message
+                    cartItemsContainer.style.display = 'block';
+                    emptyCartMessage.style.display = 'none';
+                    document.querySelector('.cart-summary').style.display = 'block';
+
+                    // Clear existing items
+                    cartItemsContainer.innerHTML = '';
+
+                    // Add each item to the cart
+                    cart.forEach((item, index) => {
+                        const cartItem = document.createElement('div');
+                        cartItem.className = 'cart-item';
+                        cartItem.innerHTML = `
+                            <img src="${item.image}" alt="${item.name}">
+                            <div class="item-details">
+                                <h3>${item.name}</h3>
+                                <p class="item-price">${item.price}</p>
+                            </div>
+                            <div class="quantity-controls">
+                                <button class="quantity-btn minus" data-index="${index}">-</button>
+                                <span class="quantity">${item.quantity}</span>
+                                <button class="quantity-btn plus" data-index="${index}">+</button>
+                            </div>
+                            <button class="remove-item" data-index="${index}">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        `;
+                        cartItemsContainer.appendChild(cartItem);
+                    });
+
+                    // Update totals
+                    updateTotals();
+                }
+            }
+
+            // Update cart totals
+            function updateTotals() {
+                const subtotal = cart.reduce((total, item) => {
+                    const price = parseFloat(item.price.replace('$', ''));
+                    return total + (price * item.quantity);
+                }, 0);
+
+                const tax = subtotal * 0.10; // 10% tax
+                const deliveryFee = 2.99;
+                const total = subtotal + tax + deliveryFee;
+
+                subtotalElement.textContent = `$${subtotal.toFixed(2)}`;
+                taxElement.textContent = `$${tax.toFixed(2)}`;
+                totalElement.textContent = `$${total.toFixed(2)}`;
+            }
+
+            // Event listener for quantity buttons
+            cartItemsContainer.addEventListener('click', function(e) {
+                if (e.target.classList.contains('quantity-btn')) {
+                    const index = parseInt(e.target.dataset.index);
+                    if (e.target.classList.contains('plus')) {
+                        cart[index].quantity++;
+                    } else if (e.target.classList.contains('minus')) {
+                        if (cart[index].quantity > 1) {
+                            cart[index].quantity--;
+                        }
+                    }
+                    localStorage.setItem('cart', JSON.stringify(cart));
+                    renderCart();
+                }
+
+                if (e.target.classList.contains('remove-item') || 
+                    e.target.parentElement.classList.contains('remove-item')) {
+                    const index = parseInt(
+                        (e.target.dataset.index || e.target.parentElement.dataset.index)
+                    );
+                    cart.splice(index, 1);
+                    localStorage.setItem('cart', JSON.stringify(cart));
+                    renderCart();
+                }
+            });
+
+            // Promo code functionality
+            applyPromoBtn.addEventListener('click', function() {
+                const promoCode = promoCodeInput.value.trim().toUpperCase();
+                if (promoCode === 'SAVE10') {
+                    alert('Promo code applied! 10% discount added.');
+                    // Implement discount logic here
+                } else {
+                    alert('Invalid promo code.');
+                }
+            });
+
+            // Checkout button functionality
+            checkoutBtn.addEventListener('click', function() {
+                if (cart.length > 0) {
+                    // Implement checkout logic here
+                    alert('Proceeding to checkout...');
+                    // Redirect to checkout page or show checkout modal
+                }
+            });
+
+            // Initial render
+            renderCart();
+        });
+    </script>
+</head>
+</html>
