Update about, menu, and restaurant pages with new images, improved restaurant details, and enhanced styling for better user experience

--- a/HTML/restaurants.html
+++ b/HTML/restaurants.html
@@ -52,16 +52,16 @@
         <!-- Restaurant Card 1 -->
         <div class="restaurant-card">
             <div class="restaurant-image">
-                <img src="../Img/restaurant1.jpg" alt="Italian Delight">
-                <span class="rating">4.5 ★</span>
+                <img src="../Img/italian.jpg" alt="Bella Italia">
+                <span class="rating">4.6 ★</span>
             </div>
             <div class="restaurant-info">
-                <h3>Italian Delight</h3>
-                <p class="cuisine">Italian • Pizza • Pasta</p>
-                <p class="delivery-info">30-45 min • Free delivery over $30</p>
+                <h3>Bella Italia</h3>
+                <p class="cuisine">Italian • Mediterranean • Wine Bar</p>
+                <p class="delivery-info">35-50 min • Free delivery over $35</p>
                 <div class="restaurant-tags">
-                    <span>Vegetarian</span>
-                    <span>Family-friendly</span>
+                    <span>Fine Dining</span>
+                    <span>Wine Selection</span>
                 </div>
             </div>
         </div>
@@ -69,16 +69,16 @@
         <!-- Restaurant Card 2 -->
         <div class="restaurant-card">
             <div class="restaurant-image">
-                <img src="../Img/restaurant2.jpg" alt="Dragon Wok">
-                <span class="rating">4.3 ★</span>
+                <img src="../Img/chinese_rest.jpg" alt="Golden Dragon">
+                <span class="rating">4.4 ★</span>
             </div>
             <div class="restaurant-info">
-                <h3>Dragon Wok</h3>
-                <p class="cuisine">Chinese • Asian • Noodles</p>
-                <p class="delivery-info">25-40 min • Free delivery over $25</p>
+                <h3>Golden Dragon</h3>
+                <p class="cuisine">Chinese • Szechuan • Dim Sum</p>
+                <p class="delivery-info">30-45 min • Free delivery over $30</p>
                 <div class="restaurant-tags">
-                    <span>Spicy</span>
-                    <span>Popular</span>
+                    <span>Authentic</span>
+                    <span>Family Style</span>
                 </div>
             </div>
         </div>
@@ -86,16 +86,64 @@
         <!-- Restaurant Card 3 -->
         <div class="restaurant-card">
             <div class="restaurant-image">
-                <img src="../Img/restaurant3.jpg" alt="Taco Fiesta">
+                <img src="../Img/mexican_rest.jpg" alt="El Mariachi">
+                <span class="rating">4.5 ★</span>
+            </div>
+            <div class="restaurant-info">
+                <h3>El Mariachi</h3>
+                <p class="cuisine">Mexican • Tex-Mex • Margaritas</p>
+                <p class="delivery-info">25-40 min • Free delivery over $25</p>
+                <div class="restaurant-tags">
+                    <span>Happy Hour</span>
+                    <span>Party Platters</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="restaurant-card">
+            <div class="restaurant-image">
+                <img src="../Img/indian.jpg" alt="Spice Route">
                 <span class="rating">4.7 ★</span>
             </div>
             <div class="restaurant-info">
-                <h3>Taco Fiesta</h3>
-                <p class="cuisine">Mexican • Tacos • Burritos</p>
-                <p class="delivery-info">20-35 min • Free delivery over $20</p>
+                <h3>Spice Route</h3>
+                <p class="cuisine">Indian • Thai • Fusion</p>
+                <p class="delivery-info">30-45 min • Free delivery over $30</p>
                 <div class="restaurant-tags">
-                    <span>Authentic</span>
-                    <span>Quick delivery</span>
+                    <span>Vegan Options</span>
+                    <span>Spice Levels</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="restaurant-card">
+            <div class="restaurant-image">
+                <img src="../Img/american.jpg" alt="Burger Haven">
+                <span class="rating">4.6 ★</span>
+            </div>
+            <div class="restaurant-info">
+                <h3>Burger Haven</h3>
+                <p class="cuisine">American • Burgers • Craft Beer</p>
+                <p class="delivery-info">20-35 min • Free delivery over $25</p>
+                <div class="restaurant-tags">
+                    <span>Gourmet Burgers</span>
+                    <span>Local Brews</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="restaurant-card">
+            <div class="restaurant-image">
+                <img src="../Img/japanese.jpg" alt="Sakura Sushi">
+                <span class="rating">4.8 ★</span>
+            </div>
+            <div class="restaurant-info">
+                <h3>Sakura Sushi</h3>
+                <p class="cuisine">Japanese • Sushi • Teppanyaki</p>
+                <p class="delivery-info">25-40 min • Free delivery over $35</p>
+                <div class="restaurant-tags">
+                    <span>Omakase</span>
+                    <span>Fresh Imported Fish</span>
                 </div>
             </div>
         </div>
