--- a/HTML/about.html
+++ b/HTML/about.html
@@ -14,6 +14,7 @@
             <a href="index.html">TastyBites</a>
         </div>
         <ul class="nav-links">
+            
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="restaurants.html">Restaurants</a></li>
@@ -74,7 +75,8 @@
                     </div>
                 </div>
                 <div class="timeline-item">
-                    <div class="year">2021</div>
+                    <div class="year">
+                        2021</div>
                     <div class="event">
                         <h3>Rapid Growth</h3>
                         <p>Expanded to 10 cities with 100+ restaurant partners</p>
